Added multiple tables

--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 
 	<body>
 
-		<div id="resultsTableArea"></div>
+		<h2> Stream Features </h2>
+
+		<div id="streamResultsTableArea"></div>
+
+		<h2> Discovery Features </h2>
+
+		<div id="discoResultsTableArea"></div>
+
+		<h2> Software </h2>
+
+		<div id="versionResultsTableArea"></div>
 
 	</body>
 
